# win_named_pipes

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  Client.hpp  client.cpp
common/: logging.hpp
custom_objects/: CMakeLists.txt  Objects.cpp  Objects.hpp
server/: CMakeLists.txt  Server.hpp  server.cpp
